# cuter

./: .gitignore  .gitmodules  .travis.yml  BIFs  Dockerfile  Interface  Makefile  Makefile.in  README.md  TODO.md  _conc.erl  bin_lib.erl  bit.erl  circle.erl  clean.sh  conc.erl  conc_cserver.erl  conc_encdec.erl  conc_eval.erl  conc_eval_bindings.erl  conc_eval_bindings.hrl  conc_eval_s.erl  conc_lib.erl  conc_lib.hrl  conc_load.erl  conc_symb.erl  conc_tserver.erl  configure.ac  coord.erl  cuter  cuter.py  dijkstra.erl  encdec.erl  example.erl  example.sh  fetch_protoc.sh  fetch_z3.sh  foo.erl  functional_test  inp  (+7 more)
.github/workflows/: ci.yml  codespell.yml
bench/src/: bang.erl  ehb.erl  parallel.erl  pcmark.erl  serialmsg.erl  timer_wheel.erl
core/: README
demo/: demo.erl  list_results.txt  results.txt
demos/src/: demo.erl  ets_test.erl  mbrot.erl  ran.erl
doc/: Constraints.md  JSON_Interface.md  Logging.md
doc/smt2/: README.md  chapter6-2.smt2  cvc4  ex2.smt2  run.py  z3
doc/smt2/parser/: .core.py.swp  .leaf.py.swp  .real.py.swp  __init__.py  atom.py  cons.py  core.py  define_fun.py  fun.py  func.py  group.py  helper.py  icons.py  int.py  ite.py  leaf.py  let.py  list.py  model.py  node.py  parser.py  real.py  smt_defs.py  tuple.py
doc/smt2/samples/: ex1.smt2  ex4.smt2
doc/smt2/solvers/: ex3.smt2
doc/smt2/test/: test_parser.py  test_utils.py
doc/smt2/test/assets/: sample1.out  sample1_cvc4.out  sample2_cvc4.out  sample2_z3.out  sample3_cvc4.out  sample3_z3.out  sample4_z3.out  sample5_cvc4.out
examples/: robot.erl
examples/src/: robot.erl
include/: cuter_macros.hrl  cuter_metrics.hrl  cuter_types.hrl  eunit_config.hrl
info/: BIFs  Constraints  Constraints.md  Erlang-Type-System  Interface  JSON_Interface.md  Logging.md  Solver-FSM  TODO
priv/: cuter_common.py  cuter_coordinator.py  cuter_env.py  cuter_generic_solver.py  cuter_global.py  cuter_interface.py  cuter_io.py  cuter_logger.py  cuter_port.py  cuter_print.py  cuter_representation.py  cuter_smt.py  cuter_smt_cvc4.py  cuter_smt_library.py  cuter_smt_process.py  cuter_smt_z3.py  cuter_solve_offline.py  cuter_types.py  cuter_z3.py  erlang_port.py  json_utils.py  smt.py  z3_utils.py
runs/: exceptions_in_stdlib.md
src/: bin_lib.erl  cerl_pmatch.erl  concolic.erl  concolic_analyzer.erl  concolic_cserver.erl  concolic_encdec.erl  concolic_eval.erl  concolic_flags.hrl  concolic_internal.hrl  concolic_json.erl  concolic_lib.erl  concolic_load.erl  concolic_macros.hrl  concolic_prefixes.hrl  concolic_scheduler.erl  concolic_spec_parse.erl  concolic_symbolic.erl  concolic_tserver.erl  coordinator.erl  cuter.erl  cuter_analyzer.erl  cuter_bfs_scheduler.erl  cuter_bfs_strategy.erl  cuter_binlib.erl  cuter_callgraph.erl  cuter_cerl.erl  cuter_codeserver.erl  cuter_config.erl  cuter_debug.erl  cuter_env.erl  cuter_erlang.erl  cuter_eval.erl  cuter_flags.erl  cuter_graphs.erl  cuter_iserver.erl  cuter_json.erl  cuter_lib.erl  cuter_log.erl  cuter_macros.hrl  cuter_maybe_error_annotation.erl  (+27 more)
src/strategies/: cuter_bfs_strategy.erl  cuter_strategy.erl  cuter_strategy_behaviour.erl
test/: eunit_test  ftests.json  functional_test  python_test  terms.py
test/ftest/expected/: bitstr-bit_sz-1.expected  bitstr-bnot_big-1.expected  bitstr-bsl_big-1.expected  bitstr-bsr_big-1.expected  bitstr-byte_sz-1.expected  bitstr-f11-1.expected  bitstr-f12-3.expected  bitstr-f13-3.expected  bitstr-f21-1.expected  bitstr-f22-2.expected  bitstr-f23-2.expected  bitstr-f24-2.expected  bitstr-f25-2.expected  bitstr-f26-2.expected  bitstr-f27-2.expected  bitstr-f31-2.expected  bitstr-f32-3.expected  bitstr-f33-4.expected  bitstr-f34-2.expected  bitstr-f35-1.expected  bitstr-f36-1.expected  bitstr-f37-1.expected  bitstr-fband-2.expected  bitstr-fband2-2.expected  bitstr-fband2_neg-2.expected  bitstr-fband3-2.expected  bitstr-fband_neg-2.expected  bitstr-fbnot-1.expected  bitstr-fbsl-2.expected  bitstr-fbsr-2.expected  collection-eval_nif-1.expected  collection-f-1.expected  collection-f1-1.expected  collection-g-1.expected  collection-g1-1.expected  collection-h-1.expected  collection-trunc1-1.expected  collection-trunc2-1.expected  complex_spec-f-1.expected  funs-f1-1.expected  (+26 more)
test/ftest/src/: bitstr.erl  collection.erl  complex_spec.erl  funs.erl  map.erl  maybe_error_annotated.erl  no_debug_info.erl  otp_int.erl  pingpong.erl  reduce_search_space.erl  search.erl  sum.erl  whitelist.erl
test/ftest/whitelist/: collection-l2in-1.txt  whitelist-f-1.txt  whitelist-g-1.txt  whitelist-k-1.txt
test/utest/include/: types.hrl
test/utest/src/: callgraph_examples.erl  cuter_cerl_tests.erl  cuter_codeserver_tests.erl  cuter_config_tests.erl  cuter_erlang_tests.erl  cuter_eval_tests.erl  cuter_graphs_tests.erl  cuter_iserver_tests.erl  cuter_json_tests.erl  cuter_metrics_tests.erl  cuter_monitor_tests.erl  cuter_pp_tests.erl  cuter_serial_tests.erl  cuter_solver_tests.erl  cuter_tests.erl  cuter_tests_lib.erl  cuter_types_tests.erl  examples_for_spec_conversion.erl  examples_for_spec_conversion_pair.erl  examples_for_type_analysis.erl  examples_for_type_analysis_pair.erl  types_and_specs.erl  types_and_specs2.erl
testsuite/src/: bang.erl  big.erl  bin_to_term_bm.erl  bs_bm.erl  bs_simple_bm.erl  bs_sum_bm.erl  call_bm.erl  call_tail_bm.erl  demo.erl  ehb.erl  ets_test.erl  float_bm.erl  freq_bm.erl  fun_bm.erl  genstress.erl  mbrot.erl  parallel.erl  pcmark.erl  ran.erl  serialmsg.erl  timer_wheel.erl
utest/: coordinator_tests.erl  cuter_cerl_tests.erl  cuter_codeserver_tests.erl  cuter_erlang_tests.erl  cuter_eval_tests.erl  cuter_iserver_tests.erl  cuter_json_tests.erl  cuter_monitor_tests.erl  cuter_solver_tests.erl  cuter_tests.erl  cuter_tests_lib.erl  eunit_config.hrl
utest/src/: cuter_cerl_tests.erl  cuter_codeserver_tests.erl  cuter_eval_tests.erl  cuter_iserver_tests.erl  cuter_solver_tests.erl  cuter_tests.erl
